# youth4-investigation-automation

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_GUIDE.md  README.md  docker-compose.yml  take_screenshots.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requeue.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/repositories/: base.py  case_repo.py  evidence_repo.py  user_repo.py
backend/app/routers/: auth.py  cases.py  evidence.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: auth_service.py  case_service.py  copilot_service.py  evidence_service.py  report_service.py  storage_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
scripts/: init_db.sql  seed_demo_data.py  update_threat_scores.py
test_cases/Case_1_Financial_Fraud/: bank_statement.csv  email_intercept.txt  informant_tip.txt  suspect_list.csv  whatsapp_chat.txt
test_cases/Case_2_Smuggling_Ring/: intercepted_call.txt  interrogation_notes.txt  seized_contacts.csv  shipping_manifest.csv  surveillance_log.txt
test_cases/Case_3_Cyber_Ransomware/: ip_addresses.csv  phishing_template.txt  ransom_note.txt  server_logs.txt  victim_statement.txt
test_cases/Case_4_Drug_Cartel/: bank_transfers.csv  surveillance_log.txt  (+1 more)
workers/: Dockerfile  celery_app.py  requeue.py  requirements.txt
(+18 files in other folders)
