[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investigation-intelligence-platform"
version = "1.0.0"
description = "AI-powered digital evidence investigation platform"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.0",

    # Pydantic
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.1",

    # Storage
    "minio>=7.2.7",

    # Redis / Celery
    "redis>=5.0.4",
    "celery>=5.4.0",

    # HTTP
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",

    # Utils
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ['app']
